@@ -1,3 +1,9 @@
+2006-07-11  Ulrich Drepper  <drepper@redhat.com>
+
+	* dwfl_module.c (compare_modules): Don't return GElf_Sxword value,
+	it can overflow the return value type.
+	Patch by Tim Moore <timoore@redhat.com>.
+
 2006-06-13  Roland McGrath  <roland@redhat.com>
 
 	* elf-from-memory.c (elf_from_remote_memory): Fix 32/64 typo.
